fixed contrast errors

--- a/final/css/commerce.css
+++ b/final/css/commerce.css
@@ -275,7 +275,7 @@ td img {
 }
 
 .required-field {
-    color: red;
+    color: rgb(100, 1, 1);
 }
 
 form {
